[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "asdf_chunked/_version.py"

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
extend_skip_glob = [".eggs/*", ".tox/*"]
