[metadata]
name = asdf_chunked
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
description = The ASDF Chunked array plug-in
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asdf-format/asdf-standard
project_urls =
    Bug Tracker = https://github.com/asdf-format/asdf-chunked/issues
    Documentation = https://asdf-chunked.readthedocs.io/en/stable
    Source Code = https://github.com/asdf-format/asdf-chunked

[options]
python_requires = >=3.7
zip_safe = true
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    importlib_resources>=3;python_version<"3.9"

[options.extras_require]
docs =
    sphinx
    sphinx_bootstrap_theme
    sphinx-asdf
test =
    pytest
    pytest-sugar
    pyyaml
    asdf >= 2.8.0
    packaging>=16.0

[options.entry_points]
asdf.resource_mappings =
    asdf_chunked = asdf_chunked.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
addopts = --color=yes

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, schemas, source, .pytest_cache, .tox
